Small fixes in events routing + contract processor copied from party processor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
           destination: role_process_queue
         role_process_out_party:
           destination: role_process_queue
+        role_process_out_contract:
+          destination: role_process_queue
         role_process_in:
           destination: role_process_queue
 #      contract
